deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudpose-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cloudpose
  template:
    metadata:
      labels:
        app: cloudpose
    spec:
      imagePullSecrets:
      - name: aliyun-registry-secret
      containers:
      - name: cloudpose
        image: crpi-rl4l5tp7zj19m2jd.cn-hongkong.personal.cr.aliyuncs.com/cloudpose-api/cloudpose:latest
        ports:
        - containerPort: 60000
        resources:
          requests:
            cpu: "0.5"
            memory: "512Mi"
          limits:
            cpu: "0.5"
            memory: "512Mi"
