service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudpose-service
spec:
  type: NodePort
  selector:
    app: cloudpose
  ports:
    - protocol: TCP
      port: 60000
      targetPort: 60000
      nodePort: 30080
